--- a/equip_search/css/stylesheet.css
+++ b/equip_search/css/stylesheet.css
@@ -3,7 +3,7 @@
 ************************************/
 body {
 	width: 50%;
-	margin: 0 auto;
+	margin: 40px auto;
 }
 
 .equip_th {
@@ -19,7 +19,7 @@ body {
 
 .equip_img {
 	width:100%;
-	max-width: 100%;
+	max-width: 190px;
 	margin: 0 auto;
 	height: auto;
 }
@@ -30,13 +30,15 @@ body {
 }
 
 .unit_img {
-	width: 96px;
-	height: 96px;
+	width:100%;
+	max-width: 128px;
 	margin: 0 auto;
+	height: auto;
 }
 
 .unit_name {
-	display: block;
+	padding-left: 10px;
+	font-weight: 700;
 }
 
 .select_label {
@@ -56,4 +58,38 @@ body {
 
 .err_msg {
 	color: red;
+}
+
+/* パーティ用の選択、取消用のボタン */
+.btn,
+a.btn,
+button.btn {
+	font-weight: 600;
+	position: relative;
+	display: inline-block;
+	width: 100%;
+	height: 100%;
+	cursor: pointer;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	-webkit-transition: all 0.3s;
+	transition: all 0.3s;
+	text-align: center;
+	vertical-align: middle;
+	text-decoration: none;
+	color: #212529;
+	border-radius: 5px;
+}
+
+button.unit_btn {
+	background-color: #6ca0ce;
+	border-bottom: 5px solid #4d69b5;
+}
+
+button.unit_btn:active {
+	margin-top: 3px;
+	background: # fff20a;
+	border-bottom: 2px solid #6ca0ce;
 }
